# py-mixpanel

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/py_mixpanel/: __init__.py  django_middleware.py  django_view.py  django_views.py  tracking.py
tests/: conftest.py
tests/py_mixpanel/: django_middleware.py  django_views.py  tracking.py
