[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-mixpanel"
version = "0.2.0"
description = "Python wrapper for Mixpanel analytics"
authors = [
    {name = "Mathieu Lamiot", email = "mathieu@wp-media.me"},
    {name = "Mark Boom", email = "mark.boom@group.one"},
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "mixpanel>=5.0.0",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "ruff==0.14.10",
]

[project.urls]
Homepage = "https://github.com/wp-media/py-mixpanel"
Repository = "https://github.com/wp-media/py-mixpanel"
Issues = "htps://github.com/wp-media/py-mixpanel/issues"

[tool.setuptools.packages.find]
where = ["src"]
