[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-mixpanel"
version = "0.4.0"
description = "Python wrapper for Mixpanel analytics"
authors = [
    {name = "Mathieu Lamiot", email = "mathieu@wp-media.me"},
    {name = "Mark Boom", email = "mark.boom@group.one"},
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "mixpanel>=5.0.0",
]
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/wp-media/py-mixpanel"
Repository = "https://github.com/wp-media/py-mixpanel"
Issues = "https://github.com/wp-media/py-mixpanel/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
py_mixpanel = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
testpaths = [
    "tests",
]
python_files = ["*.py"]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = "mixpanel"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

